<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>trifinger_msgs</name>
  <version>0.0.1</version>
  <description>TODO: Package description</description>
  <maintainer email="xuanhien070594@gmail.com">xuanhien</maintainer>
  <license>MIT</license>
  <url type="repository">https://github.com/xuanhien070594/trifinger_msgs</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_cmake_nose</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
